--- a/index.html
+++ b/index.html
@@ -831,7 +831,7 @@
 
 
 <!-- contact start-->
-  <section id="contact" class="contact">
+  <!-- <section id="contact" class="contact">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-8 ">
@@ -848,7 +848,7 @@
      
     </div>
     </div>
-  </section>
+  </section> -->
 <!-- contact end -->
 
 
